# hudo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  hudo-profile.toml  install.ps1  install.sh
.github/workflows/: release.yml
docs/: changelog.md  index.md  package-lock.json  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: HeroImage.vue  HomeInstall.vue  HomePage.vue  custom.css  index.ts
docs/guide/: config.md  install.md  profile.md  quickstart.md  update.md  what-is-hudo.md
docs/public/: install.ps1  robots.txt
docs/tools/: bun.md  chrome.md  claude-code.md  gh.md  git.md  go.md  gradle.md  index.md  jdk.md  maven.md  mingw.md  miniconda.md  mysql.md  nodejs.md  pgsql.md  pycharm.md  python.md  redis.md  rust.md  vscode.md
src/: cc.rs  cli.rs  config.rs  download.rs  env.rs  main.rs  profile.rs  registry.rs  ui.rs  version.rs
src/installer/: bun.rs  chrome.rs  claude_code.rs  gh.rs  git.rs  go.rs  gradle.rs  jdk.rs  maven.rs  mingw.rs  miniconda.rs  mod.rs  mysql.rs  nodejs.rs  pgsql.rs  pycharm.rs  redis.rs  rustup.rs  uv.rs  vscode.rs
