[package]
name = "hudo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_SystemInformation"] }
anyhow = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
zip = "2"
async-trait = "0.1"
dirs = "6"
figlet-rs = "0.1.5"
